--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "bootstrap": "^5.0.1",
     "cookie": "^0.4.1",
     "jsonwebtoken": "^8.5.1",
+    "mobx": "^6.3.2",
+    "mobx-react": "^7.2.0",
     "next": "^11.0.0",
     "nprogress": "^0.2.0",
     "react": "^17.0.2",
